k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: shopsphere-ingress
  namespace: shopsphere

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8081
